--- a/ExtensionManifest.json
+++ b/ExtensionManifest.json
@@ -1,5 +1,5 @@
 {
-  "type" : "IconPack",
+  "type" : 1,
   "name": "Voicemeeter",
   "author": "desatur8",
   "repository": "https://github.com/desatur8/MacroDeck-Icons-Voicemeeter",
